--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ashok Dey's Resume</title>
+  <title>Mano's Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta content="Online Resume of Ashok Dey" name="description">
-  <meta content="Ashok Dey" name="author">
+  <meta content="Online Resume of Manovishnu" name="description">
+  <meta content="Mano vishnu" name="author">
   <meta content=
-  "ashok, ashok-dey, resume, online-resume,computer-science-engineering,student,btech,greater-noida, noida, new-delhi, ncr,accurate- institute-management-technology,web-developer,web-designer,undergraduate"
-  name="keywords">
+  "mano, manovishnu, resume, online-resume,computer-science-engineering,student,btech,new-delhi, ncr, Niit university,web-developer,web-designer,undergraduate" name="keywords">
   <!--META ENDING-->
 
   <link href="favicon.png" rel="shorcut icon">
@@ -19,7 +18,7 @@
 <body>
     <!-- Custom Code -->
     <header class = "intro blue darken-4 z-depth-1">
-        <h1 class="grey-text text-lighten-5">Ashok Dey</h1>
+        <h1 class="grey-text text-lighten-5">MANO VISHNU</h1>
         <h5 class="grey lighten-5 blue-text text-darken-4 z-depth-2">Fulll Stack Developer</h5>
     </header>
     <article class="container about"> <!-- About Starting-->
@@ -42,10 +41,10 @@
                             </div>
                             <div class="collapsible-body light-green darken-4 grey-text text-lighten-4">
                                 <p>
-                                    Accurate Institute of Management &amp; Technology<br>
-                                    Expected : June 2016<br>
-                                    GPA : 7.1<br>
-                                    Greater Noida, UP 201306
+                                    NIIT University<br>
+                                    Expected : June 2019<br>
+                                    CGPA : 5.77<br>
+                                    Neemrana, Delhi-Jaipur Highway.
                                 </p>
                             </div>
                         </li>
@@ -57,10 +56,11 @@
                             </div>
                             <div class="collapsible-body indigo darken-4 grey-text text-lighten-4">
                                 <p>
-                                    Board : CBSE<br>
-                                    Tata D.A.V School<br>
-                                    Passed: March 2011 Percentile : 64% <br>
-                                    Jamadoba, Dhanbad 828301
+                                    Board : BIETS<br>
+                                    Narayana Junior College<br>
+                                    Passed: March 2014 <br> 
+                                    CGPA : 9.35% <br>
+                                    Kukatpally Hyderabad 50105
                                 </p>
                             </div>
                         </li>
@@ -72,11 +72,11 @@
                             </div>
                             <div class="collapsible-body grey darken-4 grey-text text-lighten-4">
                                 <p>
-                                    Board : CBSE<br>
-                                    Tata D.A.V School<br>
-                                    Passed: March 2009<br>
-                                    Percentile : 91%<br>
-                                    Jamadoba, Dhanbad 828301
+                                    Board : SSCAP<br>
+                                    Sharadha Vidya Bhavan HS<br>
+                                    Passed: March 2012<br>
+                                    GPA : 9.7<br>
+                                    SG Nagar Hyderabad 500055
                                 </p>
                             </div>
                         </li>
@@ -92,7 +92,7 @@
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-envelope-square blue-grey-text text-darken-4"></i>
                                 <span class="myBold cyan-text text-darken-4">
-                                    Send OTP/Messages to Contacts  
+                                    Static Code Analysis-
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -116,7 +116,7 @@
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-dot-circle-o blue-grey-text text-darken-4"></i>
                                 <span class="myBold blue-grey-text text-darken-4">
-                                    Todo RESTful API
+                                   Bookstore RESTful Application
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -140,7 +140,7 @@
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-desktop light-blue-text text-darken-3"></i>
                                 <span class="myBold light-blue-text text-darken-3">
-                                    Pixel Explosion in C++ and SDL2
+                                    Credit Score Estimator
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -188,7 +188,7 @@
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
                                 <span class="myBold cyan-text text-darken-4">
-                                    Qurious
+                                    Customer Billing System
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -211,7 +211,7 @@
                         <li> <!-- Project 2 -->
                             <div class="collapsible-header"><i class="fa fa-comments-o teal-text text-darken-4"></i>
                                 <span class="myBold yellow-text text-accent-4">
-                                    Group Chat Application
+                                    Obstacle Avoiding Rover
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -236,13 +236,13 @@
                         <li> <!-- Project 3 -->
                             <div class="collapsible-header"><i class="material-icons pink-text text-darken-4">business</i>
                                 <span class="myBold grey-text text-darken-4">
-                                    Website for Intek
+                                    Website for VerZeo
                                 </span>
                             </div>
                             <div class="collapsible-body">
                                 <div class="card myCard orange darken-4">
                                     <div class="card-content white-text">
-                                      <span class="card-title">Intek Computer Education</span>
+                                      <span class="card-title">WayOut Ecommerce</span>
                                       <p>
                                           Yet another web development project.
                                           This website is for a computer education
@@ -335,7 +335,7 @@
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
-                                            HTML5, CSS3, JavaScript, TypeScript, jQuery, NodeJS, MongoDB, Angular 2
+                                            HTML5, CSS3, JavaScript, TypeScript, jQuery, NodeJS.
                                         </span>
                                    </p>
                                 </div> <!-- END card Content-->
@@ -356,7 +356,7 @@
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
-                                            C, C++, PHP, Java, Python, JavaScript
+                                            C, C++, Java, Python, JavaScript
                                         </span>
                                    </p>
                                 </div> <!-- END card Content-->
@@ -380,7 +380,7 @@
                                       <span class ="myBold myHighlight-4">
                                           Adobe Photoshop, Visual Studio,
                                           CodeBlocks, Sublime Text, Atom,
-                                          VS Code, PowerShell, GCC.
+                                          VS Code.
                                       </span>
                                  </p>
                                 </div>
@@ -423,8 +423,8 @@
                                   </span>
                                   <p>
                                       <span class ="myBold myHighlight-4">
-                                          Bootstrap 3, Foundation 5, Materialize CSS,
-                                          NodeJS, jQuery, Electron, Mocha, Socket IO, ExpressJS
+                                          Bootstrap 4, Materialize CSS,
+                                          NodeJS, jQuery
                                       </span>
                                     </p>
                                     <span class="myLight">
@@ -471,7 +471,7 @@
             <!--Download Resume FAB-->
             <div class="fixed-action-btn verical" style="bottom: 45px; right:24px; width:50px">
               <a class="btn-floating btn-large waves-effect waves-light red"
-                 href="https://drive.google.com/open?id=0Byqg5mck_vdLUHYwM0NfQjR0aFU" target="_blank">
+                 href="https://drive.google.com/file/d/1LaKVGuz4yFrE99lhBUYIbETpFz0rbppL/view" target="_blank">
                 <i class="material-icons">description</i>
               </a>
             </div>
@@ -483,32 +483,27 @@
               </a>
               <ul>
                 <li>
-                    <a class="btn-floating black" href="https://github.com/ashokdey" target="_blank">
+                    <a class="btn-floating black" href="https://github.com/amanovishnu" target="_blank">
                     <i class="fa fa-github-alt"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="btn-floating blue darken-2" href="https://linkedin.com/in/ashokdey" target="_blank">
+                    <a class="btn-floating blue darken-2" href="https://www.linkedin.com/in/amanovishnu/" target="_blank">
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="btn-floating grey darken-4" href="https://stackoverflow.com/users/2804236/ashok-dey" target="_blank">
-                        <i class="fa fa-stack-overflow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a class="btn-floating blue darken-4" href="https://www.facebook.com/ashokdey001" target="_blank">
+                    <a class="btn-floating blue darken-4" href="https://www.facebook.com/amanovishnu" target="_blank">
                         <i class="fa fa-facebook-f"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="btn-floating blue lighten-2" href="https://twitter.com/ashokdey001" target="_blank">
+                    <a class="btn-floating blue lighten-2" href="https://twitter.com/ManoVishnu2" target="_blank">
                         <i class="fa fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="btn-floating red" href="https://plus.google.com/+AshokDey/" target="_blank">
+                    <a class="btn-floating red" href="https://plus.google.com/u/0/" target="_blank">
                         <i class="fa fa-google-plus"></i>
                     </a>
                 </li>
@@ -516,7 +511,7 @@
             </div>
             <div class="card-pannel blue-text text-darken-4">
                 <p>
-                    Copyright (c) 2016 All Rights Reserved. Made with lots of <i class="fa fa-heart red-text"></i> , <i class="fa fa-html5 green-text text-darken-4"></i> and <i class="fa fa-css3 brown-text text-darken-4"></i>.
+                    Copyright (c) 2018 All Rights Reserved. Made with lots of <i class="fa fa-heart red-text"></i> , <i class="fa fa-html5 green-text text-darken-4"></i> and <i class="fa fa-css3 brown-text text-darken-4"></i>.
                 </p>
             </div>
 
