Online Resume Changes Completed

--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-envelope-square blue-grey-text text-darken-4"></i>
                                 <span class="myBold cyan-text text-darken-4">
-                                    Static Code Analysis-
+                                    Static Code Analysis-Minerva
                                 </span>
                             </div>
                             <div class="collapsible-body">
                                 <div class="card myCard blue darken-3">
                                     <div class="card-content white-text">
-                                      <span class="card-title">Application to Send SMS</span>
+                                      <span class="card-title">Application for Code Review</span>
                                       <p>
-                                          This applicattion uses the Twilio API to send Randonly generated 6-digit OTP/ Custom Messages to Saved contacts<br><br>  
+                                         A Web Application where registered users can get his/her reviewed by experts <br><br>  
                                           <span class="myBold myHighlight">
-                                              Tech Stack: NodeJS, ExpressJS, EJS, Bootstrap, MongoDB, Mocha, Supertest
+                                              Tech Stack: NodeJS, ExpressJS, Bootstrap, MongoDB
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://send-otp.herokuapp.com/" target="_blank">Use the APP Now!</a>
+                                      <a href="https://amanovishnu.github.io/Minerva-Code-Analysis-Tool/index.html" target="_blank">Use the APP Now!</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -122,16 +122,16 @@
                             <div class="collapsible-body">
                                 <div class="card myCard blue-grey darken-3">
                                     <div class="card-content white-text">
-                                      <span class="card-title">RESTful API to manage Todos</span>
+                                      <span class="card-title">RESTful API to manage data</span>
                                       <p>
-                                          This API manages Todos and Users. It facilitates registering a user, logging in and create, update and delete todos<br><br>  
+                                          Through this api a user can add or remove books and purchase books via third party ecommerce sites<br><br>  
                                           <span class="myBold myHighlight">
-                                              Tech Stack: NodeJS, ExpressJS, MongoDB, Mocha
+                                              Tech Stack: NodeJS, ExpressJS, MongoDB
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Use The API Now !</a>
+                                      <a href="https://github.com/amanovishnu/Bookstore-Web-App" target="_blank">View the Repository</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -146,16 +146,16 @@
                             <div class="collapsible-body">
                                 <div class="card myCard light-blue lighten-1">
                                     <div class="card-content white-text">
-                                      <span class="card-title">Pixel Simulation Using in C++</span>
+                                      <span class="card-title">credit score estimation for loan</span>
                                       <p>
-                                          C++ application that draws patterns with pixels. It uses an external library SDL2 that facilitates graphical programming and event trapping using C/C++<br><br>  
+                                         Users can get his/ her credit score by using PAN numbers and file a complaint aganist false data<br><br>  
                                           <span class="myBold myHighlight">
-                                              Tech Stack: C++ and SDL2
+                                              Tech Stack: HTML5, CSS3, PHP, MYSQL
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://github.com/ashokdey/Pixel_Explosion" target="_blank">Visit The Repository Now !</a>
+                                      <a href="https://github.com/amanovishnu/Credit-Score-Estimator" target="_blank">Visit The Repository Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -179,7 +179,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://ashokdey.github.io/projects/weather-app/" target="_blank">Use the App Now !</a>
+                                      <a href="https://amanovishnu.github.io/Weather-App/index.html" target="_blank">Use the App Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -194,16 +194,16 @@
                             <div class="collapsible-body">
                                 <div class="card myCard purple darken-3">
                                     <div class="card-content white-text">
-                                      <span class="card-title">Lets Help Each Other</span>
+                                      <span class="card-title">C++ based Application for Billing</span>
                                       <p>
-                                          A question answer platform. This is a major project containing more than 15 modules. Currently under development. it has few features of a social network like following an user and feeds.<br>
+                                          A Billing System written in C++ for a Customer as a Part of internship<br><br>
                                           <span class="myBold myHighlight">
-                                              Tech Stack: HTML5, CSS3, PHP, MYSQL, jQuery, Bootstrap3
+                                              Tech Stack: C++, Command prompt
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://www.qurious.xyz" target="_blank">Visit The Site Now !</a>
+                                      <a href="https://github.com/amanovishnu/Customer-Billing-System" target="_blank">View The Repository !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -217,18 +217,16 @@
                             <div class="collapsible-body">
                                 <div class="card myCard teal darken-4">
                                     <div class="card-content white-text">
-                                      <span class="card-title myLight">JustShout : Keep Shouting</span>
+                                      <span class="card-title myLight">Rover for Dimensional Mapping</span>
                                       <p>
-                                          A simple chat application just in 35 lines.
-                                          No login required and anyone can join the chat. The chats are stored and fetched from database. It's responsive, uses Ajax and The brand new Material Design<br>
+                                          A Obstacle Avoiding Rover which can Estimate the Dimensions of the obstacle and can plot those data on the Screen using MATLAB<br><br>
                                           <span class="myBold myHighlight">
-                                              Tech stack: HTML5, CSS3, PHP, MySQL
+                                              Arduino, C++, MATLAB
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://www.ashokdey.in/projects/justshout2/" target="_blank">Check the Shoughts !</a>
-                                      <a href="http://www.ashokdey.in/projects/justshout" target="_blank">Older Version</a>
+                                      <a href="https://github.com/amanovishnu/Obstalce-Mapping-Rover" target="_blank">View The Repository</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -236,7 +234,7 @@
                         <li> <!-- Project 3 -->
                             <div class="collapsible-header"><i class="material-icons pink-text text-darken-4">business</i>
                                 <span class="myBold grey-text text-darken-4">
-                                    Website for VerZeo
+                                    Ecommerce Website for VerZeo
                                 </span>
                             </div>
                             <div class="collapsible-body">
@@ -245,16 +243,15 @@
                                       <span class="card-title">WayOut Ecommerce</span>
                                       <p>
                                           Yet another web development project.
-                                          This website is for a computer education
-                                          institute that is designed by me and is still under development. It will be redesigned again
-                                          and will be completed by Dec 2016<br>
+                                          This website is a part of the Training Program that is designed by me and is still under development. It will be redesigned again
+                                          and will be completed by Dec 2018<br>
                                           <span class="myUpper myHighlight">
-                                            Tech Stack : HTML5, CSS3, PHP, MySQL, Bootstrap 3
+                                            Tech Stack : HTML5, CSS3,Bootstrap 4
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://intek.ashokdey.in/" target="_blank">Have a Look</a>
+                                      <a href="https://amanovishnu.github.io/WayOut-eCommerce/index.html" target="_blank">Have a Look</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -281,8 +278,7 @@
                                         </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://www.ashokdey.in" target="_blank">Latest Version</a>
-                                      <a href="http://www.ashokdey.in/old" target="_blank">Older Version</a>
+                                      <a href="https://amanovishnu.github.io/" target="_blank">Latest Version</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
