--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                       <p>This is a collection of the website designs I have made as a hobby using Adobe Photoshop CS 6 and Adobe Photoshop CC. The graphics and toons used are borrowed from the internet freebies</p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://drive.google.com/open?id=0Byqg5mck_vdLRWZnU3VLdWtpWUU" target= "_blank">View the Collection</a>
+                                      <a href="https://drive.google.com/drive/folders/1VtwyhvPVkZKGkPORQoCDEJ5Kt6rc42-W?usp=sharing" target= "_blank">View the Collection</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
