--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <!--Download Resume FAB-->
             <div class="fixed-action-btn verical" style="bottom: 45px; right:24px; width:50px">
               <a class="btn-floating btn-large waves-effect waves-light red"
-                 href="https://drive.google.com/file/d/1LaKVGuz4yFrE99lhBUYIbETpFz0rbppL/view" target="_blank">
+                 href="https://drive.google.com/file/d/1XrmJVYI-4HuS7eZ4C4IADwC0lGDaNT6t/view?usp=sharing">
                 <i class="material-icons">description</i>
               </a>
             </div>
